# Examples

./: .gitignore  COPYING  README.md  alusus_features.json  build_dataset.py  build_rag_data.py  build_vector_index.py  doc_index.json  docs2id.json  index.json  inference.py  inference_engine.py  libs_index.json  local_fine_tuninng.py  local_fine_tuninng_test.py  rag_inference.py  rag_test_set.jsonl  rag_train_set.jsonl  readme.md  test_set.jsonl  train_script.py  train_set.jsonl  utils.py  validate_dataset.py
AlususHelper/: AlususExpert.alusus  AlususHelper.alusus  BasicEngine.alusus  Config.alusus  DocsExpert.alusus  KeywordDocsRetriever.alusus  WebPlatformEngine.alusus  utils.alusus
McpAlusus/: McpServer.alusus
Source/: backtracking.alusus  backtracking.c  factorial.c  fibonacci.alusus  fibonacci.c  greedy.alusus  is_prime.ar.alusus  is_prime.c  is_prime.en.alusus  is_prime.js  searching.c  sorting.alusus
Source/ArrayRelatedOperations/: accumulate.ar.alusus  accumulate.c  accumulate.en.alusus  accumulate.js  array_slice.ar.alusus  array_slice.c  array_slice.en.alusus  array_slice.js  check_all.ar.alusus  check_all.c  check_all.en.alusus  check_all.js  check_any.ar.alusus  check_any.c  check_any.en.alusus  check_any.js  check_order.ar.alusus  check_order.c  check_order.en.alusus  check_order.js  clip.ar.alusus  clip.c  clip.en.alusus  clip.js  erase.ar.alusus  erase.c  erase.en.alusus  erase.js  exists.ar.alusus  exists.c  exists.en.alusus  exists.js  filter.ar.alusus  filter.c  filter.en.alusus  filter.js  find_diff_index.ar.alusus  find_diff_index.c  find_diff_index.en.alusus  find_diff_index.js  (+77 more)
Source/Bitwise/: bitwise10.alusus  bitwise10.c  bitwise11.alusus  bitwise11.c  bitwise12.alusus  bitwise12.c  bitwise2.alusus  bitwise3.alusus  bitwise3.c  bitwise4.alusus  bitwise5.alusus  bitwise5.c  bitwise6.alusus  bitwise6.c  bitwise7.alusus  bitwise7.c  bitwise8.alusus  bitwise8.c  bitwise9.alusus  bitwise9.c
Source/Divide_And_Conquer/: divide_and_conquer_1.alusus  (+4 more)
c_api/: CMakeLists.txt  README.md
c_api/include/: AlususExpert.h  BasicEngine.h  DocsExpert.h  KeywordDocsRetriever.h  MainAgent.h  Translator.h  WebPlatformEngine.h  common.h  utils.h
c_api/src/: AlususExpert.c  BasicEngine.c  DocsExpert.c  KeywordDocsRetriever.c  MainAgent.c  Translator.c  WebPlatformEngine.c  main.c  utils.c
copilot_server/: LLMs.py  agents.py  app.py
data/: create_vdbs.py  extract_func_cls_prompt.txt  generate_description.py  readme.md  scraper.py  summary_gen_prompt.txt
doc/: 1.txt  10.txt  100.txt  102.txt  103.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  (+66 more)
doc/ar/: alias.txt  (+27 more)
fine_grained/: index.json
mcp/: app.py  tools.json
opencode/: config.json
(+369 files in other folders)
